<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.example.administrator.oper.MainOperActivity"
              android:orientation="vertical">


    <include layout="@layout/toolbar_head"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <FrameLayout
                android:id="@+id/fl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/nihao">

        </FrameLayout>


        <View
                android:id="@+id/nihao"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@+id/rg_oper"
                android:background="@color/stroke_line"
                android:layout_marginBottom="5dp"/>



        <RadioGroup
                android:id="@+id/rg_oper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="@dimen/paddingBottom_5">

            <RadioButton
                    android:id="@+id/rd_analysis"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:button="@null"
                    android:checked="true"
                    android:drawableTop="@drawable/operationmanage_selector"
                    android:gravity="center"
                    android:textColor="@drawable/index_textcolor_selecter"
                    android:text="@string/analysis"
                    android:textSize="@dimen/text_size_12"
                    android:drawablePadding="3dp"/>

            <RadioButton
                    android:id="@+id/rd_educationadmin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:button="@null"
                    android:drawableTop="@drawable/operationmanage_edu_selector"
                    android:gravity="center"
                    android:textColor="@drawable/index_textcolor_selecter"
                    android:text="@string/education_admin"
                    android:textSize="@dimen/text_size_12"
                    android:drawablePadding="3dp"/>

            <RadioButton
                    android:id="@+id/rd_daily"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:button="@null"
                    android:gravity="center|bottom"
                    android:textColor="@drawable/index_textcolor_selecter"
                    android:text="@string/daily"
                    android:textSize="@dimen/text_size_12"
                    android:clipChildren="false"/>
            <RadioButton
                    android:id="@+id/rd_finance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:button="@null"

                    android:drawableTop="@drawable/operationmanage_fiance_selector"
                    android:gravity="center"
                    android:textColor="@drawable/index_textcolor_selecter"
                    android:text="@string/finance"
                    android:textSize="@dimen/text_size_12"
                    android:drawablePadding="3dp"/>

            <RadioButton
                    android:id="@+id/rd_me"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:button="@null"
                    android:drawableTop="@drawable/operationmanage_me_selector"
                    android:gravity="center"
                    android:textColor="@drawable/index_textcolor_selecter"
                    android:text="@string/me"
                    android:textSize="@dimen/text_size_12"
                    android:drawablePadding="3dp"/>
        </RadioGroup>

        <ImageView
                android:id="@+id/img_protruding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/day_protruding_false"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="23dp"/>
    </RelativeLayout>
</LinearLayout>